--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
